--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -5,7 +5,7 @@
     "build": {
         "yarn": "v14.0.0,v16.0.0",
         "npm": "v16.0.0"
-    },    
+    },
     "dependencies": {
         "@amcharts/amcharts3-react": "^3.1.0",
         "@reduxjs/toolkit": "^1.5.0",
@@ -18,6 +18,7 @@
         "axios-mock-adapter": "^1.19.0",
         "bootstrap": "^4.6.0",
         "formik": "^2.2.6",
+        "google-maps-react": "^2.0.6",
         "history": "^5.0.0",
         "install": "^0.13.0",
         "jquery": "^3.6.0",
@@ -34,6 +35,7 @@
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
+        "recompose": "^0.30.0",
         "redux": "^4.0.5",
         "redux-form": "^8.3.7",
         "redux-persist": "^6.0.0",
@@ -43,8 +45,8 @@
         "yup": "^0.32.9"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+        "build": "export SET NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
     },
@@ -64,6 +66,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {}
+    }
 }
