--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -22,6 +22,7 @@
         "history": "^5.0.0",
         "install": "^0.13.0",
         "jquery": "^3.6.0",
+        "mathpix-markdown-it": "^1.2.6",
         "npm": "^7.6.3",
         "react": "^17.0.1",
         "react-app-polyfill": "^2.0.0",
